Update title and metadata in index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Karmo - Responsive Creative HTML Template</title>
+	<title>Fly2 China town</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
-	<meta name="author" content="Tanislav Robert">
-	<meta name="description" content="KARMO is a creative and modern template for digital agencies">
+	<meta name="author" content="Jinyi">
+	<meta name="description" content="Let's go have some hotpot">
 
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/flexslider.css">
@@ -38,15 +38,14 @@
 				<a class="box-primary-nav-trigger" href="#0"><span class="box-menu-icon"></span></a>
 			</div>
 
-			<!-- ✅ 更新后的导航 -->
 			<nav>
 				<ul class="box-primary-nav">
 					<li class="box-label">FlytoChinatown</li>
 					<li><a href="#home">Home</a> <i class="lnr lnr-home"></i></li>
-					<li><a href="#pretrip">Pre trip</a></li>
-					<li><a href="#agenda">Agenda</a></li>
-					<li><a href="#important">Important</a></li>
-					<li><a href="#settings">Settings</a></li>
+					<li><a href="pretrip.html">Pre trip</a></li>
+					<li><a href="#agenda.html">Agenda</a></li>
+					<li><a href="#importantmessage.html">Important message</a></li>
+					<li><a href="#settings.html">Settings</a></li>
 
 					<li class="box-label">SOCIAL</li>
 					<li class="box-social"><a href="#0"><i class="fa fa-facebook"></i></a></li>
